Update samples